# my-weekly-agent

./: CLAUDE.md  README.md  SPEC.md  main.py  pyproject.toml  task.md
.claude/: settings.json
examples/: sample_report_2026-W26.md
src/relay/: __init__.py  cli.py  config.py  shell.py  week.py
src/relay/db/: __init__.py  schema.py  store.py
src/relay/llm/: __init__.py  base.py  claude.py  fake.py
src/relay/models/: __init__.py  task.py
src/relay/services/: __init__.py  capture.py  draft.py  render.py  report.py  tasks.py
src/relay/template/: __init__.py  loader.py  models.py
templates/: weekly_template.yaml
tests/: test_cli.py  test_config.py  test_db.py  test_draft.py  test_llm.py  test_models.py  test_render.py  test_report.py  test_services_tasks.py  test_shell.py  test_template.py  test_week.py
