[project]
name = "weekly-agent"
version = "0.1.0"
description = "주간보고 정리 agent — 운영 시스템 주간보고서 작성·정리 도구"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "typer>=0.12",       # 단발 CLI (설계결정 #10)
    "pyyaml>=6.0",       # 사용자 편집 템플릿 로드 (#9)
    "pydantic>=2.7",     # 모델/검증, LLM 구조화 출력 (검증 단계 ②)
    "jinja2>=3.1",       # 프롬프트/렌더 템플릿 (의존성 정책)
    "rich>=13.7",        # CLI 출력
    "anthropic>=0.40",   # LLM provider (어댑터 뒤, #8) — 2단계부터 사용
]

# RAG는 단계적 도입(#1). 무거운 의존성이라 별도 extra로 분리 — MVP 1단계엔 설치 안 함.
[project.optional-dependencies]
rag = [
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0",   # 로컬 한국어 임베딩(BGE-m3 등) 옵션
]

[project.scripts]
weekly = "weekly_agent.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weekly_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
